--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -10,6 +10,27 @@ date: 2016-11-25 11:23:02
 
 # 系统管理类
 
+## 快捷键
+### 搜索历史命令
+快速搜索历史命令并运行
+**Ctrl+r**输入命令关键字即可搜索出来，按**左或右方向键**，或**鼠标左键**（视使用的第三方ssh软件而定）选定该命令，回车执行。
+
+---
+## ssh免密钥登录
+`ssh-keygen` 创建公钥和密钥。 一路回车就行，会在~/.ssh/下创建相应文件。
+
+`ssh-copy-id user@IP` 把本地主机的公钥复制到远程主机的authorized_keys文件上。这样就能免登录这台主机啦。
+
+**ssh-copy-id 也会给远程主机的用户主目录（home）和~/.ssh, 和~/.ssh/authorized_keys设置合适的权限 。**
+
+A将公钥发给B，不是说让B来访问A，而是A就可以访问B了。也就是说B不能在.ssh文件夹下的authorized_keys保留A的公钥，如保存就是把自己让给别人来访问！
+
+参考：
+https://my.oschina.net/emptytimespace/blog/79173
+http://www.linuxidc.com/Linux/2015-07/119608.htm
+http://www.runoob.com/w3cnote/set-ssh-login-key.html
+
+---
 ## 分析空间大小
 分析空间大小（根目录下个文件夹大小）:`du -sh /*`
 
