--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -9,7 +9,9 @@ date: 2016-11-03 10:46:10
 ---
 
 MySql
-### 特别要注意大小写和命令后的英文;号。
+# 常用操作
+mysql数据库大小写不敏感。
+
 **新安装默认密码为空**`mysql -u root` 即可进入，不要`mysql -u root -p `进不去的
 大于5.7的版本默认有随机密码，执行`cat  /var/log/mysqld.log | grep password | grep 'root@localhost' | awk -F 'root@localhost: ' '{print $2}'`查看随机生成的密码。
 
@@ -18,10 +20,15 @@ MySql
 `SHOW DATABASES;`
 
 ## 查看表
-	USE blog;
-	SHOW TABLES;
+```
+USE blog;
+SHOW TABLES;```
+
 ## 查看表中的列
-	SHOW COLUMNS FROM auth_user; 或：DESCRIBE auth_user;
+```
+SHOW COLUMNS FROM auth_user; 
+或
+DESCRIBE auth_user;```
 **describe 表名** 是 **show columns from 表名** 的一种快捷方式。
 
 ## 创建数据库
@@ -45,13 +52,14 @@ create table pet(
 为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
 
-## 删除数据库：
+## 删除数据库
 mysql> `DROP DATABASE 库名;`
-## 删除数据表：
+## 删除数据表
 mysql> `DROP TABLE 表名；`
-## 将表中记录清空：
+## 将表中记录清空
 mysql> `DELETE FROM 表名;`
 
+---
 ## 创建表(复杂形式)：
 ### 创建customer表：
 ```
@@ -120,7 +128,7 @@ D:\Mysql\bin>`mysqladmin -u root -p password 新密码`
 Enter password:(在此输入原密码)
 格式：**mysqladmin -u用户名 -p旧密码 password 新密码。**
 
-#### 忘记密码：
+## 忘记密码
 - 1.用root或者运行mysqld的用户登录系统； 
 - 2．利用kill命令结束掉mysqld的进程； 
 - 3．使用**--skip-grant-tables**参数启动MySQL Server 
@@ -228,7 +236,7 @@ MySQL 数据类型
 |enum(value1,value2,ect)|ENUM 是 ENUMERATED 列表的缩写。可以在括号中存放最多 65535 个值。|
 |set|SET 与 ENUM 相似。但是，SET 可拥有最多 64 个列表项目，并可存放不止一个 choice|
 
-#### 主键和自动递增字段
+## 主键和自动递增字段
 每个表都应有一个主键字段。
 主键用于对表中的行进行唯一标识。每个主键值在表中必须是唯一的。此外，主键字段不能为空，这是由于数据库引擎需要一个值来对记录进行定位。
 主键字段永远要被编入索引。这条规则没有例外。你必须对主键字段进行索引，这样数据库引擎才能快速定位给予该键值的行。
@@ -246,7 +254,7 @@ Age int
 
 mysql_query($sql,$con);```
 
-#### 插入：
+### 插入
 语法
 ```
 INSERT INTO table_name
@@ -280,7 +288,7 @@ VALUES ('Glenn', 'Quagmire', '33')");
 mysql_close($con);
 ?>```
 
-#### 把来自表单的数据插入数据库
+### 把来自表单的数据插入数据库
 现在，我们创建一个 HTML 表单，这个表单可把新记录插入 "Persons" 表。
 这是这个 HTML 表单：
 ```html
@@ -323,7 +331,7 @@ mysql_close($con)
 ?>```
 
 
-#### 修改：
+### 修改
 `UPDATE` 语句用于修改数据库表中的数据。
 语法
 ```mysql
@@ -363,7 +371,7 @@ mysql_close($con);
 |Peter|Griffin|36|
 |Glenn|Quagmire|33|
 
-#### 删除：
+### 删除
 删除数据库中的数据
 `DELETE FROM` 语句用于从数据库表中删除记录。
 语法
@@ -401,7 +409,7 @@ mysql_close($con);
 |---|---|---|
 |Glenn|Quagmire|33|
 
-#### 查询：
+### 查询
 `SELECT` 语句用于从数据库中选取数据。
 语法
 SELECT column_name(s) FROM table_name
@@ -434,7 +442,7 @@ mysql_close($con);
 Peter Griffin
 Glenn Quagmire
 
-#### 在 HTML 表格中显示结果
+### 在 HTML 表格中显示结果
 下面的例子选取的数据与上面的例子相同，但是将把数据显示在一个 HTML 表格中：
 ```php
 <?php
