--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -36,7 +36,9 @@ Jenkins：https://jenkins.io
 
 ---
 # 学习、技能
-**免费计算机编程类书籍**：https://haiwx.github.io/2016/09/13/CodeBooks/
+**免费计算机编程类书籍**：
+https://github.com/justjavac/free-programming-books-zh_CN
+http://siberiawolf.com/free_programming/index.html
 
 **godeye**:http://www.godeye.org/
 
