--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -850,6 +850,21 @@ wget -r -p -np -k http://xxx.com/xxx
 ## axel高速下载
 axel是Linux下一个不错的HTTP/ftp高速下载工具。支持多线程下载、断点续传，且可以从多个地址或者从一个地址的多个连接来下载同一个文件。适合网速不给力时多线程下载提高下载速度。比如在国内VPS或服务器上下载lnmp一键安装包用Axel就比wget快。
 
+CentOS安装Axel： 目前yum源上没有Axel，我们可以到http://pkgs.repoforge.org/axel/下载rpm包安装。 
+
+32位CentOS执行下面命令： 
+```
+wget -c http://pkgs.repoforge.org/axel/axel-2.4-1.el5.rf.i386.rpm 
+rpm -ivh axel-2.4-1.el5.rf.i386.rpm ```
+
+64位CentOS执行下面命令： 
+```
+wget -c http://pkgs.repoforge.org/axel/axel-2.4-1.el5.rf.x86_64.rpm 
+rpm -ivh axel-2.4-1.el5.rf.x86_64.rpm ```
+
+Debian/Ubuntu安装Axel： `apt-get install axel`
+
+
 如下载lnmp安装包指定10个线程，保存到/tmp/中：
 ```
 axel -n 10 -o /tmp/ http://www.linuxde.net/lnmp.tar.gz```
