修复排版错乱

--- a/source/_posts/系统管理/2016-11-03-服务器入侵肉鸡发包.md
+++ b/source/_posts/系统管理/2016-11-03-服务器入侵肉鸡发包.md
@@ -12,8 +12,10 @@ date: 2016-11-03 09:34:15
 
 大多数是因为PHP-ddos木马原因导致发包
 
+# watch ifconfig
 `watch ifconfig`　**查看数据包新增情况**
 
+# ifstat
 `ifstat`　**查看网卡流量**
 
 |       eth0        ||        eth1         ||       
@@ -24,17 +26,55 @@ date: 2016-11-03 09:34:15
 |  240.20  |  192.91 |   257.22  |  179.06  |
 |  136.48  |  236.72 |   203.89  |  179.84  |
 
+# nload
 `nload`　**以流量图显示**
 
+# iptraf
 `iptraf`　**很直观的工具**
 
-[root@ct-nat ~]# `sar -n DEV 1 4` 　**查看4次数据**
+#sar
+`sar -n DEV 1 4` 　**查看4次数据**
 
+# netstat
 `netstat -tu -c`   查看发包的端口
 
+# lsof
 用 **lsof -i :39733** 查看端口的进程，Kill就可以了
 
-一篇博客的解决办法：
+---
+# NetHogs
+**NetHogs**查看网络使用情况
+```
+wget http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
+rpm -Uvh epel-release-6-8.noarch.rpm
+yum clean all
+yum makecache
+yum install nethogs -y
+nethogs```
+
+下图显示各进程当前网络使用情况：
+![](http://ofyfogrgx.bkt.clouddn.com/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%85%A5%E4%BE%B5%E8%82%89%E9%B8%A1%E5%8F%91%E5%8C%851.jpg)
+
+按“m”键可以切换到统计视图，显示各进程总的网络使用情况
+![](http://ofyfogrgx.bkt.clouddn.com/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%85%A5%E4%BE%B5%E8%82%89%E9%B8%A1%E5%8F%91%E5%8C%852.jpg)
+
+使用帮助：
+`nethogs --help`
+  
+	usage: nethogs [-V] [-b] [-d seconds] [-t] [-p] [device [device [device ...]]]  
+		-V : 显示版本信息，注意是大写字母V.  
+		-d : 延迟更新刷新速率，以秒为单位。默认值为 1.  
+		-t : 跟踪模式.  
+		-b : bug 狩猎模式 — — 意味着跟踪模式.  
+		-p : 混合模式（不推荐）.  
+		设备 : 要监视的设备名称. 默认为 eth0  
+	当 nethogs 运行时, 按:  
+		q: 退出  
+		m: 总数和当前使用情况模式之间切换  
+找到大量发包的进程，之后kill掉，再排查下这个进程是什么程序，文件路径在哪里，删除掉异常的文件。
+
+---
+# 一篇博客的解决办法
 从服务器上使用命令`sar -n DEV 1 4 `，确实出现大量发包的问题，（下边是正常的，异常的情况eth0txpck/s 10000左右了）
 
 先进行限速或者拔掉网线：
@@ -97,36 +137,5 @@ tcpdump -n -i eth0 src 192.168.35.145 or 192.168.35.155 and port ! 22 and tcp```
 或者可以条件可以是or  和 and  配合使用即可筛选出更好的结果。
 
 可以将异常IP加入到**/etc/hosts.deny**中，或者防火墙设置下
-
-**NetHogs**查看网络使用情况
-```
-wget http://dl.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm
-rpm -Uvh epel-release-6-8.noarch.rpm
-yum clean all
-yum makecache
-yum install nethogs -y
-nethogs```
-
-下图显示各进程当前网络使用情况：
-![](http://ofyfogrgx.bkt.clouddn.com/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%85%A5%E4%BE%B5%E8%82%89%E9%B8%A1%E5%8F%91%E5%8C%851.jpg)
-
-按“m”键可以切换到统计视图，显示各进程总的网络使用情况
-![](http://ofyfogrgx.bkt.clouddn.com/%E6%9C%8D%E5%8A%A1%E5%99%A8%E5%85%A5%E4%BE%B5%E8%82%89%E9%B8%A1%E5%8F%91%E5%8C%852.jpg)
-
-使用帮助：
-`nethogs --help`
-  
-	usage: nethogs [-V] [-b] [-d seconds] [-t] [-p] [device [device [device ...]]]  
-		-V : 显示版本信息，注意是大写字母V.  
-		-d : 延迟更新刷新速率，以秒为单位。默认值为 1.  
-		-t : 跟踪模式.  
-		-b : bug 狩猎模式 — — 意味着跟踪模式.  
-		-p : 混合模式（不推荐）.  
-		设备 : 要监视的设备名称. 默认为 eth0  
-	当 nethogs 运行时, 按:  
-		q: 退出  
-		m: 总数和当前使用情况模式之间切换  
-找到大量发包的进程，之后kill掉，再排查下这个进程是什么程序，文件路径在哪里，删除掉异常的文件。
-
 
 ---
