--- a/source/_posts/系统管理/2016-11-11-swap分区转换.md
+++ b/source/_posts/系统管理/2016-11-11-swap分区转换.md
@@ -8,7 +8,7 @@ abbrlink: 4829
 date: 2016-11-11 15:09:02
 ---
 
-# 建立Swap分区（普通分区转Swap分区）
+# 普通分区转Swap分区
 增加Swap分区，适用于系统没有Swap分区，或者有Swap分区但空间很小的情况。
 
 查看有哪些分区：`fdisk -l`
