--- a/source/_posts/环境搭建/2016-11-25-重装服务器系统基本配置.md
+++ b/source/_posts/环境搭建/2016-11-25-重装服务器系统基本配置.md
@@ -28,9 +28,9 @@ yum install wget vim lsof lrzsz tcpdump -y ```
 
 防火墙打开需要的端口 
 ```
-iptables -A INPUT -p tcp –dport 80 -j ACCEPT
-iptables -A INPUT -p tcp –dport 8080 -j ACCEPT 
-iptables -A INPUT -p tcp –dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
+iptables -A INPUT -p tcp --dport 80 -j ACCEPT
+iptables -A INPUT -p tcp --dport 8080 -j ACCEPT 
+iptables -A INPUT -p tcp --dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
 保存配置
 `/etc/init.d/iptables save`
 重启
@@ -78,9 +78,9 @@ ifconfig                    #查看IP地址```
 
 ## 防火墙
 ```
-iptables -A INPUT -p tcp –dport 80 -j ACCEPT
-iptables -A INPUT -p tcp –dport 8080 -j ACCEPT 
-iptables -A INPUT -p tcp –dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
+iptables -A INPUT -p tcp --dport 80 -j ACCEPT
+iptables -A INPUT -p tcp --dport 8080 -j ACCEPT 
+iptables -A INPUT -p tcp --dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
 保存配置
 `/etc/init.d/iptables save`
 重启
@@ -166,9 +166,9 @@ dns-nameservers 8.8.8.8```
 ```
 resolvconf -u
 iptables -A INPUT -p tcp -i eth0 --dport 22 -j ACCEPT
-iptables -A INPUT -p tcp –dport 80 -j ACCEPT
-iptables -A INPUT -p tcp –dport 8080 -j ACCEPT 
-iptables -A INPUT -p tcp –dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
+iptables -A INPUT -p tcp --dport 80 -j ACCEPT
+iptables -A INPUT -p tcp --dport 8080 -j ACCEPT 
+iptables -A INPUT -p tcp --dport 3306 -j ACCEPT  #激活用ACCEPT ，关闭用DROP```
 保存配置
 `/etc/init.d/iptables save`
 重启
