--- a/source/_posts/Dev/2016-11-04-Git教程.md
+++ b/source/_posts/Dev/2016-11-04-Git教程.md
@@ -11,10 +11,15 @@ date: 2016-11-04 14:03:40
 # 安装Git
 ## Debian/Ubuntu
 `apt-get install git`
+
 ## Centos/RedHat
 `yum install git`
+
 ## Windows
-安装包下载：https://git-for-windows.github.io/
+安装包下载：
+https://git-for-windows.github.io/
+https://git-scm.com/
+
 ## Mac
 安装包下载：https://sourceforge.net/projects/git-osx-installer/
 
