--- a/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
@@ -11,13 +11,17 @@ abbrlink: 23632
 date: 2016-11-08 15:20:01
 ---
 
-# 安装Hexo
+# 配置环境
 Hexo是用node-js写的，hexo生成静态页面的速度要比较快，hexo是本地生成html再上传。
 官网：https://hexo.io/zh-cn/docs/
 ## 安装Node.js
 官网下载对应平台安装包安装：https://nodejs.org  
 详见：[Node.js开发环境搭建](http://leolan.top/2016/11/02/%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA-2016-11-02-Node-js%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA/)
 
+## 安装Git
+参考教程：[Git教程](https://www.leolan.top/posts/41310/)
+
+---
 ## 安装Hexo
 
 ```
@@ -31,6 +35,18 @@ hexo server              #运行服务
 这时可以在浏览器打开网页。`hexo server`的简化命令为`hexo s`；指定端口：`-p xxxx`
 和jekyll一样是通过修改**_config.yml**文件来配置站点信息的。（在Hexo中，根目录下的**_config.yml**文件是用来配置网站信息的；主题目录下的**_config.yml**文件是用来配置文章主题，页面等等的）
 
+---
+**如果是在另一台电脑上配置环境（远程仓库中有项目文件）只需要安装Node.js、Git、Markdown编辑器，之后`npm install -g hexo-cli`**
+
+```
+git config --global user.name "leolan"
+git config --global user.email "842632422@qq.com"
+ssh-keygen -t rsa -C "842632422@qq.com"
+cat ~/.ssh/id_rsa.pub
+```
+**把密钥添加到Coding和Github上，再`git clone 仓库地址（建议用ssh地址）`就直接可以正常使用了。**
+
+---
 默认的目录结构如下：
 
 ```
