--- a/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
@@ -36,7 +36,7 @@ hexo server              #运行服务
 和jekyll一样是通过修改**_config.yml**文件来配置站点信息的。（在Hexo中，根目录下的**_config.yml**文件是用来配置网站信息的；主题目录下的**_config.yml**文件是用来配置文章主题，页面等等的）
 
 ---
-**如果是在另一台电脑上配置环境（远程仓库中有项目文件）只需要安装Node.js、Git、Markdown编辑器，之后`npm install -g hexo-cli`**
+**如果是在另一台电脑上配置环境（远程仓库中有项目文件）只需要安装Node.js、Git、Markdown编辑器，之后`npm install -g hexo-cli`安装hexo后配置Git**
 
 ```
 git config --global user.name "leolan"
