--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -8,91 +8,14 @@ abbrlink: 37198
 date: 2016-11-03 10:46:10
 ---
 
-MySql
-# 常用操作
-mysql数据库大小写不敏感。
+
+# 密码
 
 **新安装默认密码为空**`mysql -u root` 即可进入，不要`mysql -u root -p `进不去的
 大于5.7的版本默认有随机密码，执行`cat  /var/log/mysqld.log | grep password | grep 'root@localhost' | awk -F 'root@localhost: ' '{print $2}'`查看随机生成的密码。
 
-
-## 查看数据库
-`SHOW DATABASES;`
-
-## 查看表
-```
-USE blog;
-SHOW TABLES;```
-
-## 查看表中的列
-```
-SHOW COLUMNS FROM auth_user; 
-或
-DESCRIBE auth_user;```
-**describe 表名** 是 **show columns from 表名** 的一种快捷方式。
-
-## 创建数据库
-```mysql
-mysql> CREATE DATABASE 库名;
-mysql> USE 库名;
-mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));```
-例：
-## 创建表
-```
-use demo;
-create table pet(
-        name varchar(20),        #名字
-        owner varchar(20),       #主人
-        species varchar(20),     #种类
-        sex char(1),             #性别
-        birth date,              #出生日期
-        death date               #死亡日期
-)```
-
-为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
-![](http://ofyfogrgx.bkt.clouddn.com//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
-
-## 删除数据库
-mysql> `DROP DATABASE 库名;`
-## 删除数据表
-mysql> `DROP TABLE 表名；`
-## 将表中记录清空
-mysql> `DELETE FROM 表名;`
-
 ---
-## 创建表(复杂形式)：
-### 创建customer表：
-```
-create table customers(
-    id int not null auto_increment,
-    name char(20) not null,
-    address char(50) null,
-    city char(50) null,
-    age int not null,
-    love char(50) not null default 'No habbit',
-    primary key(id)
-)engine=InnoDB;```
-
-**SELECT last_insert_id();**这个函数可以获得返回最后一个**auto_increment**值。默认值为：default 'No habbit',
-引擎类型，多为**engine = InnoDB**，如果省略了**engine=**语句，则使用默认的引擎(MyISAM)
-
-## 更改表结构：
-
-- 增加一列：
-	`alter table pet add des char(100) null;`
-- 删除：
-    `alter table pet drop column des;`
-- 重命名表：
-	`rename table pet to animals;`
-- 添加id字段：
-```
-alter table pet add id int not null
-primary key auto_increment first;```
-详见：http://www.cnblogs.com/beginman/p/3249472.html
-
-
-
-## 查看密码
+## 设置密码
 * 1.用root 进入mysql后
 mysql>`set password =password('你的密码');`
 mysql>`flush privileges;`
@@ -106,6 +29,7 @@ mysql>`use mysql;`
 mysql>`update user set password=password('你的密码') where user='root'; `
 mysql>`flush privileges;`
 
+---
 ## 设置数据库密码
 ```
 mysql -u root -p
@@ -115,6 +39,7 @@ mysql -u root -p
 > flush privileges;
 > exit;```
 
+---
 ## 修改Mysql密码
 - 方法一：
 使用phpmyadmin，直接修改Mysql库的user 表。或者使用Navicat for Mysql 直接修改连接属性。
@@ -128,6 +53,7 @@ D:\Mysql\bin>`mysqladmin -u root -p password 新密码`
 Enter password:(在此输入原密码)
 格式：**mysqladmin -u用户名 -p旧密码 password 新密码。**
 
+---
 ## 忘记密码
 - 1.用root或者运行mysqld的用户登录系统； 
 - 2．利用kill命令结束掉mysqld的进程； 
@@ -140,66 +66,9 @@ Enter password:(在此输入原密码)
 
 ---
 
-看提示，PHP执行时看错误，是用mysql还是mysqli
-语法
-**mysql_connect(servername,username,password);**
-
-参数描述servername可选。规定要连接的服务器。默认是 "localhost:3306"。username可选。规定登录所使用的用户名。默认值是拥有服务器进程的用户的名称。password可选。规定登录所用的密码。默认是 ""。
-
-语法
-**CREATE DATABASE database_name**
-
-|参数|描述|
-|-----|-------|
-|servername|可选。规定要连接的服务器。默认是 "localhost:3306"。|
-|username|可选。规定登录所使用的用户名。默认值是拥有服务器进程的用户的名称。|
-|passwd|可选。规定登录所用的密码。默认是 ""。|
-
-为了让 PHP 执行上面的语句，我们必须使用 mysql_query() 函数。此函数用于向 MySQL 连接发送查询或命令。
-连接：
-例子:
-```php
-<?php
-//在一个变量中 ($con) 存放了在脚本中供稍后使用的连接。如果连接失败，将执行 "die" 部分：
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }```
-
-
-创建：
-```mysql
-// Create database
-//创建了一个名为 "my_db" 的数据库：
-if (mysql_query("CREATE DATABASE my_db",$con))
-  {
-  echo "Database created";
-  }
-else
-  {
-  echo "Error creating database: " . mysql_error();
-  }
-
-// Create table in my_db database
-//创建一个名为 "Persons" 的表，此表有三列。列名是 "FirstName", "LastName" 以及 "Age"：
-//重要事项：在创建表之前，必须首先选择数据库。通过 mysql_select_db() 函数选取数据库。
-//注释：当您创建 varchar 类型的数据库字段时，必须规定该字段的最大长度，例如：varchar(15)。
-mysql_select_db("my_db", $con);
-$sql = "CREATE TABLE Persons 
-(
-FirstName varchar(15),
-LastName varchar(15),
-Age int
-)";
-mysql_query($sql,$con);
-
-mysql_close($con);   //提前关闭连接，请使用 mysql_close() 函数,不加此句则脚本结束后关闭。
-?>```
-
 ---
-
-MySQL 数据类型
+# MySQL特性
+## MySQL 数据类型
 下面的可使用的各种 MySQL 数据类型：
 
 |数值类型|描述|
@@ -236,6 +105,7 @@ MySQL 数据类型
 |enum(value1,value2,ect)|ENUM 是 ENUMERATED 列表的缩写。可以在括号中存放最多 65535 个值。|
 |set|SET 与 ENUM 相似。但是，SET 可拥有最多 64 个列表项目，并可存放不止一个 choice|
 
+---
 ## 主键和自动递增字段
 每个表都应有一个主键字段。
 主键用于对表中的行进行唯一标识。每个主键值在表中必须是唯一的。此外，主键字段不能为空，这是由于数据库引擎需要一个值来对记录进行定位。
@@ -254,8 +124,146 @@ Age int
 
 mysql_query($sql,$con);```
 
-### 插入
+---
+
+---
+# 增
+## 创建数据库
+```mysql
+mysql> CREATE DATABASE 库名;
+mysql> USE 库名;
+mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));```
+
+---
+## 创建表
+```
+use demo;
+create table pet(
+        name varchar(20),        #名字
+        owner varchar(20),       #主人
+        species varchar(20),     #种类
+        sex char(1),             #性别
+        birth date,              #出生日期
+        death date               #死亡日期
+)```
+
+为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
+![](http://ofyfogrgx.bkt.clouddn.com//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
+
+---
+## 创建表(复杂形式)：
+### 创建customer表：
+```
+create table customers(
+    id int not null auto_increment,
+    name char(20) not null,
+    address char(50) null,
+    city char(50) null,
+    age int not null,
+    love char(50) not null default 'No habbit',
+    primary key(id)
+)engine=InnoDB;```
+
+**SELECT last_insert_id();**这个函数可以获得返回最后一个**auto_increment**值。默认值为：default 'No habbit',
+引擎类型，多为**engine = InnoDB**，如果省略了**engine=**语句，则使用默认的引擎(MyISAM)
+
+---
+
+---
+# 删
+## 删除数据库
+mysql> `DROP DATABASE 库名;`
+## 删除数据表
+mysql> `DROP TABLE 表名；`
+## 将表中记录清空
+mysql> `DELETE FROM 表名;`
+
+---
+## 删除数据库中的数据
+`DELETE FROM` 语句用于从数据库表中删除记录。
 语法
+```mysql
+DELETE FROM table_name
+WHERE column_name = some_value```
+
+注释：SQL 对大小写不敏感。DELETE FROM 与 delete from 等效。
+为了让 PHP 执行上面的语句，我们必须使用 **mysql_query**( 函数。该函数用于向 SQL 连接发送查询和命令。
+例子
+稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|35|
+|Glenn|Quagmire|33|
+下面的例子删除 "Persons" 表中所有 LastName='Griffin' 的记录：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+mysql_query("DELETE FROM Persons WHERE LastName='Griffin'");
+
+mysql_close($con);
+?>```
+在这次删除之后，表是这样的：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Glenn|Quagmire|33|
+
+---
+
+---
+
+# 改
+## 修改
+`UPDATE` 语句用于修改数据库表中的数据。
+语法
+```
+mysql
+UPDATE table_name
+SET column_name = new_value
+WHERE column_name = some_value```
+
+注释：SQL 对大小写不敏感。UPDATE 与 update 等效。
+为了让 PHP 执行上面的语句，我们必须使用 mysql_query( 函数。该函数用于向 SQL 连接发送查询和命令。
+例子
+稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|35|
+|Glenn|Quagmire|33|
+下面的例子更新 "Persons" 表的一些数据：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+mysql_query("UPDATE Persons SET Age = '36'
+WHERE FirstName = 'Peter' AND LastName = 'Griffin'");
+
+mysql_close($con);
+?>```
+在这次更新后，"Persons" 表格是这样的：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|36|
+|Glenn|Quagmire|33|
+
+---
+## 插入
 ```
 INSERT INTO table_name
 VALUES (value1, value2,....)```
@@ -288,7 +296,24 @@ VALUES ('Glenn', 'Quagmire', '33')");
 mysql_close($con);
 ?>```
 
-### 把来自表单的数据插入数据库
+---
+
+## 更改表结构
+
+- 增加一列：
+	`alter table pet add des char(100) null;`
+- 删除：
+    `alter table pet drop column des;`
+- 重命名表：
+	`rename table pet to animals;`
+- 添加id字段：
+```
+alter table pet add id int not null
+primary key auto_increment first;```
+详见：http://www.cnblogs.com/beginman/p/3249472.html
+
+---
+## 把来自表单的数据插入数据库
 现在，我们创建一个 HTML 表单，这个表单可把新记录插入 "Persons" 表。
 这是这个 HTML 表单：
 ```html
@@ -330,86 +355,29 @@ echo "1 record added";
 mysql_close($con)
 ?>```
 
+---
 
-### 修改
-`UPDATE` 语句用于修改数据库表中的数据。
-语法
-```mysql
-UPDATE table_name
-SET column_name = new_value
-WHERE column_name = some_value```
+---
+# 查
+## 查看数据库
+`SHOW DATABASES;`
 
-注释：SQL 对大小写不敏感。UPDATE 与 update 等效。
-为了让 PHP 执行上面的语句，我们必须使用 mysql_query( 函数。该函数用于向 SQL 连接发送查询和命令。
-例子
-稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
+---
+## 查看表
+```
+USE blog;
+SHOW TABLES;```
 
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|35|
-|Glenn|Quagmire|33|
-下面的例子更新 "Persons" 表的一些数据：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
+---
+## 查看表中的列
+```
+SHOW COLUMNS FROM auth_user; 
+或
+DESCRIBE auth_user;```
+**describe 表名** 是 **show columns from 表名** 的一种快捷方式。
 
-mysql_select_db("my_db", $con);
-
-mysql_query("UPDATE Persons SET Age = '36'
-WHERE FirstName = 'Peter' AND LastName = 'Griffin'");
-
-mysql_close($con);
-?>```
-在这次更新后，"Persons" 表格是这样的：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|36|
-|Glenn|Quagmire|33|
-
-### 删除
-删除数据库中的数据
-`DELETE FROM` 语句用于从数据库表中删除记录。
-语法
-```mysql
-DELETE FROM table_name
-WHERE column_name = some_value```
-
-注释：SQL 对大小写不敏感。DELETE FROM 与 delete from 等效。
-为了让 PHP 执行上面的语句，我们必须使用 **mysql_query**( 函数。该函数用于向 SQL 连接发送查询和命令。
-例子
-稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|35|
-|Glenn|Quagmire|33|
-下面的例子删除 "Persons" 表中所有 LastName='Griffin' 的记录：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-mysql_query("DELETE FROM Persons WHERE LastName='Griffin'");
-
-mysql_close($con);
-?>```
-在这次删除之后，表是这样的：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Glenn|Quagmire|33|
-
-### 查询
+---
+## 查询
 `SELECT` 语句用于从数据库中选取数据。
 语法
 SELECT column_name(s) FROM table_name
@@ -437,12 +405,18 @@ while($row = mysql_fetch_array($result))
 
 mysql_close($con);
 ?>```
-上面这个例子在 $result 变量中存放由 mysql_query() 函数返回的数据。接下来，我们使用 mysql_fetch_array() 函数以数组的形式从记录集返回第一行。每个随后对 mysql_fetch_array() 函数的调用都会返回记录集中的下一行。 while loop 语句会循环记录集中的所有记录。为了输出每行的值，我们使用了 PHP 的 $row 变量 ($row['FirstName'] 和 $row['LastName'])。
+
+上面这个例子在 `$result `变量中存放由 `mysql_query()` 函数返回的数据。接下来，我们使用 `mysql_fetch_array() `函数以数组的形式从记录集返回第一行。每个随后对 `mysql_fetch_array()` 函数的调用都会返回记录集中的下一行。 `while loop `语句会循环记录集中的所有记录。为了输出每行的值，我们使用了 PHP 的 `$row `变量( `$row['FirstName']` 和 `$row['LastName']`)。
 以上代码的输出：
 Peter Griffin
 Glenn Quagmire
 
-### 在 HTML 表格中显示结果
+---
+
+---
+
+# 其他情况
+## 在 HTML 表格中显示结果
 下面的例子选取的数据与上面的例子相同，但是将把数据显示在一个 HTML 表格中：
 ```php
 <?php
@@ -480,5 +454,66 @@ mysql_close($con);
 |Peter|Griffin|
 |Glenn|Quagmire|
 
+
+---
+## 连接数据库失败
+看提示，PHP执行时看错误，是用mysql还是mysqli
+语法
+**mysql_connect(servername,username,password);**
+
+参数描述servername可选。规定要连接的服务器。默认是 "localhost:3306"。username可选。规定登录所使用的用户名。默认值是拥有服务器进程的用户的名称。password可选。规定登录所用的密码。默认是 ""。
+
+语法
+**CREATE DATABASE database_name**
+
+|参数|描述|
+|-----|-------|
+|servername|可选。规定要连接的服务器。默认是 "localhost:3306"。|
+|username|可选。规定登录所使用的用户名。默认值是拥有服务器进程的用户的名称。|
+|passwd|可选。规定登录所用的密码。默认是 ""。|
+
+为了让 PHP 执行上面的语句，我们必须使用 mysql_query() 函数。此函数用于向 MySQL 连接发送查询或命令。
+连接：
+例子:
+```
+php
+<?php
+//在一个变量中 ($con) 存放了在脚本中供稍后使用的连接。如果连接失败，将执行 "die" 部分：
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }```
+
+
+创建：
+```
+mysql
+// Create database
+//创建了一个名为 "my_db" 的数据库：
+if (mysql_query("CREATE DATABASE my_db",$con))
+  {
+  echo "Database created";
+  }
+else
+  {
+  echo "Error creating database: " . mysql_error();
+  }
+
+// Create table in my_db database
+//创建一个名为 "Persons" 的表，此表有三列。列名是 "FirstName", "LastName" 以及 "Age"：
+//重要事项：在创建表之前，必须首先选择数据库。通过 mysql_select_db() 函数选取数据库。
+//注释：当您创建 varchar 类型的数据库字段时，必须规定该字段的最大长度，例如：varchar(15)。
+mysql_select_db("my_db", $con);
+$sql = "CREATE TABLE Persons 
+(
+FirstName varchar(15),
+LastName varchar(15),
+Age int
+)";
+mysql_query($sql,$con);
+
+mysql_close($con);   //提前关闭连接，请使用 mysql_close() 函数,不加此句则脚本结束后关闭。
+?>```
 
 ---
