--- a/source/_posts/杂项/2016-11-03-工具集.md
+++ b/source/_posts/杂项/2016-11-03-工具集.md
@@ -113,6 +113,27 @@ date: 2016-11-03 22:22:03
   ● XtreemFS -XtreemFS是一个用于存储需求的容错式分布式文件系统。
 
 ---
+# 开源在线调查工具
+## LimeSurvey
+LimeSurvey 拥有一个调查工具必要的所有功能，可以做一些简单的调查和投票，如果想要做更复杂一点的就需要分开多个页面。LimeSurvey 支持 80 种语言，提供 29 种类型的问卷模板，支持离线调查，支持匿名回复，可以把调查结果导出成 Microsoft Excel®, Microsoft Word®, SPSS®, R, Stata®, PDF 或者 csv 格式。
+LimeSurvey 可以通过 JavaScript、图片和视频来个性定制调查问卷，甚至可以直接修改 HTML 代码。LimeSurvey 可以直接部署在自己的服务器上。
+
+## JD Esurvey
+如果 LimeSurvey 还不能满足你的要求，或者你使用的是基于 Java 的 web 应用，那么可以试试 JD Esurvey。JD Esurvey 被称为“一款开源的企业调查问卷 Web 应用” ，功能非常强大，容量极大，也极其健壮。
+JD Esurvey 可以收集很多类型的信息：是/否问卷、产品或服务星级评价等。JD Esurvey 支持使用平板和智能手机来创建或者管理调查问卷，发布出去的问卷对移动端非常友好。JD Esurvey 还支持无障碍模式，适合残疾人士使用。
+JD Esurvey 是使用 Java 编写的，基于 Spring 框架，遵循 AGPLv3 开源授权协议，GitHub 地址：https://github.com/JD-Software/JDeSurvey。
+
+## Quick Survey
+对于大多数人，LimeSurvey 和 JD Esurvey 太难掌控了，我们只是需要一个快速并且简单的方式来收集各种意见和反馈。那么 Quick Survey 是个更合适的选择。
+Quick Survey 只允许创建问答类型或者多选列表类型的调查问卷。用户可以创建问题或者列表，然后发布并分享 URL。Quick Survey 的调查结果也可以导出成 CSV 文件。
+Quick Survey 遵循 MIT 开源授权协议，GitHub 地址：https://github.com/simonv3/quick-survey/。
+
+## TellForm
+在功能方面，TellForm 是介于 LimeSurvey 和 Quick Survey 中间的，适合需要一部分功能而又不需要大而全需求的用户。
+TellForm 提供 11 种不同类型的调查问卷;支持多种语言;拥有良好的调查分析功能;可以轻松定制调查问卷的外观和感觉;支持 Native Analytics 和 Google Analytics;可嵌入表单;提供表单 API。TellForm 应用接口也是非常简单和整洁的。TellForm 后期会实现数据加密、集成 Typeform API、集成第三方/插件(比如：Slack)等功能。
+TellForm 是 TypeForm 和 Google Forms 的开源替代品，遵循 MIT 开源授权协议，GitHub 地址：https://github.com/whitef0x0/tellform。
+
+---
 # DNS服务器
   ● Bind -最广泛使用的域名服务软件
   ● djbdns -DNS应用集合，包括tinydns
