--- a/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
+++ b/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
@@ -4,10 +4,6 @@ categories:
   - 环境搭建
 tags:
   - Mac常用工具
-  - Homebrew
-  - wget
-  - zsh
-  - xcode
 abbrlink: 2336
 date: 2016-11-17 15:17:05
 ---
@@ -31,6 +27,10 @@ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"```
 ```
 brew install wget```
 有时遇到默认的下载链接速度十分坑爹，就 brew edit wget 修改下链接再装
+
+---
+**iterm2**
+https://www.zhihu.com/question/27447370
 
 ---
 **[Oh-my-zsh](https://github.com/robbyrussell/oh-my-zsh)**
