--- a/source/_posts/环境搭建/2016-11-08-Jekyll 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Jekyll 搭建博客.md
@@ -12,7 +12,7 @@ date: 2016-11-08 15:13:11
 
 # 安装Jekyll
 Jekyll用Ruby写的，jekyll是把原文上传github，可以直接生成博客，也可以用在线编辑器处理。
-  1. 搭建ruby环境（ruby版本最好大于2.2.2），详见：[Ruby开发环境搭建](http://leolan.top/2016/10/31/%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA-2016-10-21-Ruby%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83%E6%90%AD%E5%BB%BA/)  
+  1. 搭建ruby环境（ruby版本最好大于2.2.2），详见：[Ruby开发环境搭建](https://www.leolan.top/posts/31766/)  
   2. 安装kramdown（Markdown文档处理器）
 gem install kramdown
   3. 安装rouge（语法高亮）
