--- a/source/_posts/环境搭建/2017-02-27-Redis.md
+++ b/source/_posts/环境搭建/2017-02-27-Redis.md
@@ -96,7 +96,11 @@ chkconfig redis on
 service redis start
 
 #停止服务：
-service redis stop```
+service redis stop
+
+#检查Redis是否正在工作
+redis-cli
+```
  
 
 配置防火墙打开对应的端口：`vi /etc/sysconfig/iptables`
@@ -104,14 +108,29 @@ service redis stop```
 
 重启防火墙`service iptables restart`
 
+---
+## Ubuntu
+```
+apt-get update 
+apt-get install redis-server
+
+#检查Redis是否正在工作
+redis-cli
+```
+
+
+
+
 
 ---
 # Redis常用命令
-参考：http://www.centoscn.com/image-text/config/2015/0728/5928.html
-
+参考：
+http://www.centoscn.com/image-text/config/2015/0728/5928.html
+http://doc.redisfans.com/
 
 ---
-
+# Redis快速入门
+http://www.yiibai.com/redis/redis_quick_guide.html
 
 
 
