--- a/source/_posts/虚拟化/2016-11-03-Docker常用命令.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker常用命令.md
@@ -12,8 +12,23 @@ date: 2016-11-03 15:53:27
 Docker是基于容器的，直接用带有相应功能的镜像就行，而不必运行Docker容器来自己搭建环境那么麻烦。
 Docker 中文网 http://www.docker.org.cn
 
-# 查看docker信息
+# 常用操作
+```
+docker pull url    #下载镜像
+docker images      #查看镜像ID
 
+#运行并交互方式进入容器的bash，同时暴露端口把80映射到4000上
+docker run -i -p 4000:80 -t imagesID /bin/bash
+
+docker ps          #查看正在运行的容器及容器ID
+
+#提交当前版本制作新的镜像
+docker commit xxx(容器ID) new_images_name
+
+```
+
+---
+# 查看docker信息
 ## 查看docker版本  
 `docker version`
 ## 显示docker系统的信息  
