--- a/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
+++ b/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
@@ -91,7 +91,8 @@ windows
 
 ---
 ## Zabbix 环境配置
-Centos 7 yum安装
+### Centos 7 yum安装
+yum安装方式全部为默认位置，如果是已搭建了LANMP或LNMP环境，编译安装要指定位置。
 1、环境信息
 ```
 [root@localhost ~]# cat /etc/redhat-release 
@@ -100,9 +101,12 @@ CentOS Linux release 7.2.1511 (Core)
 3.10.0-327.28.3.el7.x86_64```
 
 2、yum安装 
-我们使用阿里云yum源,官方yum源下载会比较慢。
+使用阿里云yum源,官方yum源下载会比较慢。
 ```
-rpm -ivh http://mirrors.aliyun.com/zabbix/zabbix/3.0/rhel/7/x86_64/zabbix-release-3.0-1.el7.noarch.rpm```
+#Centos 7
+rpm -ivh http://mirrors.aliyun.com/zabbix/zabbix/3.2/rhel/7/x86_64/zabbix-release-3.2-1.el7.noarch.rpm
+#Centos 6
+rpm -ivh http://mirrors.aliyun.com/zabbix/zabbix/3.2/rhel/6/x86_64/zabbix-release-3.2-1.el6.noarch.rpm```
 下载release版本，会在yum.repos.d下面生成一个zabbix.repo的文件
 
 3、服务端安装相关软件包
@@ -148,7 +152,7 @@ systemctl start zabbix-server
 systemctl start httpd```
 注：如果没有启动成功，要看一下是不是80端口被占用
 
-6.Web界面安装master 
+6.Web管理界面的安装 
 访问地址：http://IP/zabbix/setup.php 
 点击Next step进行安装 
 首先要确保没有no，如果时区没有改好会提示我们进行修改 
@@ -173,6 +177,152 @@ systemctl start zabbix-agent```
 
 查看端口号:` netstat -lntp `
 10051为server端口，10050为agent端口
+
+---
+### 源码编译安装
+服务器已安装好一键LNMP,数据库用的是mariadb。
+#### 服务端
+基本环境安装，不安装组件在编译时会报各种错误。
+
+```
+#zabbix yum源
+#Centos 7
+rpm -ivh http://mirrors.aliyun.com/zabbix/zabbix/3.2/rhel/7/x86_64/zabbix-release-3.2-1.el7.noarch.rpm
+#Centos 6
+rpm -ivh http://mirrors.aliyun.com/zabbix/zabbix/3.2/rhel/6/x86_64/zabbix-release-3.2-1.el6.noarch.rpm
+
+
+yum install -y tar svn gcc automake make nmap traceroute iptstate wget net-snmp-devel net-snmp-libs net-snmp net-snmp-perl iksemel net-snmp-python net-snmp-utils java-1.8.0-openjdk python-pip java-1.8.0-openjdk-devel mariadb-devel libxml2-devel gettext libcurl-devel OpenIPMI-devel mysql iksemel-devel libssh2-devel unixODBC unixODBC-devel mysql-connector-odbc postgresql-odbc openldap openldap-devel telnet net-tools snmptt rubygems
+
+```
+
+```
+#新建用户
+groupadd zabbix -g 201 
+useradd -g zabbix -u 201 -m zabbix 
+
+#下载安装包
+wget https://jaist.dl.sourceforge.net/project/zabbix/ZABBIX%20Latest%20Stable/3.0.8/zabbix-3.0.8.tar.gz
+tar zxvf zabbix-3.0.8.tar.gzls
+cd zabbix-3.0.8
+
+#开启大多数常用功能，如果报错，出错原因，一步一步来，不要一次性粘贴代码。这里注意mysql_config的路径可能不是这个。
+./configure --prefix=/usr --sysconfdir=/etc/zabbix --with-mysql=/usr/local/mariadb/bin/mysql_config --with-net-snmp --with-libcurl --enable-server --enable-agent --enable-proxy --with-unixodbc --with-ldap --with-ssh2 --enable-Java
+
+make install
+#安装出错找原因，安装成功启动就好了。
+
+#服务修改
+systemctl restart zabbix-server
+systemctl restart zabbix-agent
+systemctl enable zabbix-server
+systemctl enable zabbix-agent
+
+vim /etc/sysconfig/selinux
+SELINUX=disabled
+
+vim /etc/sysconfig/iptables
+#放行10050和10051端口或关闭防火墙
+systemctl disable firewalld
+
+reboot   #重启SELinux才生效
+
+```
+
+
+#### 客户端 Agent
+##### Centos
+```
+#下载安装包
+wget https://jaist.dl.sourceforge.net/project/zabbix/ZABBIX%20Latest%20Stable/3.0.8/zabbix-3.0.8.tar.gz
+tar zxvf zabbix-3.0.8.tar.gzls
+cd zabbix-3.0.8
+
+#编译安装
+./configure --prefix=/usr --sysconfdir=/etc/zabbix --enable-agent
+make install
+
+#设置
+mkdir /var/log/zabbix 
+useradd zabbix
+chown zabbix.zabbix /var/log/zabbix 
+cp misc/init.d/fedora/core/zabbix_agentd /etc/init.d/ 
+chmod 755 /etc/init.d/zabbix_agentd 
+sed -i "s#BASEDIR=/usr/local#BASEDIR=/usr/#g" /etc/init.d/zabbix_agentd
+
+#添加到系统服务
+vim /etc/services 
+
+zabbix-agent 10050/tcp #ZabbixAgent 
+zabbix-agent 10050/udp #ZabbixAgent 
+zabbix-trapper 10051/tcp #ZabbixTrapper 
+zabbix-trapper 10051/udp #ZabbixTrapper
+
+
+#修改配置
+vim /etc/zabbix/zabbix_agentd.conf
+
+#日志最大值，默认1M，超出会rotate
+LogFileSize=1
+#被动模式下服务器地址，可以是ip或者hostname
+Server=192.168.0.1
+#主动模式下服务器地址，可以ip或者hostname
+ServerActive=192.168.0.1
+#被监控机的ip或hostname，注意的是该值必须和你在server的监控界面中定义的server name要保持一致
+Hostname=192.168.0.2
+
+#重启一下agent服务
+
+```
+
+批量安装：https://my.oschina.net/u/2316994/blog/376916
+agent配置文件详解： http://blog.chinaunix.net/uid-29155617-id-4668602.html
+
+---
+##### Windows
+下载：http://www.zabbix.com/downloads/3.2.0/zabbix_agents_3.2.0.win.zip
+```
+#设置成windows服务
+c:\zabbix_agents_3.2.0.win\bin\win64\zabbix_agentd.exe -c c:\zabbix_agents_3.0.4.win\conf\zabbix_agentd.win.conf -i
+#启动
+c:\zabbix_agents_3.2.0.win\bin\win64\zabbix_agentd.exe -s 
+#停止
+c:\zabbix_agents_3.0.4.win\bin\win64\zabbix_agentd.exe -x
+```
+防火墙增加可通行程序或放行10050端口,服务自动启动
+查看端口：` netstat -an | find "10050"`
+
+一键安装zabbix_agent：http://www.tuicool.com/articles/rUFjqm7
+
+---
+#### Zabbix-get
+```
+zabbix_get -h
+ Zabbix get v2.2.1 (revision 40808) (09 December 2013)
+usage: zabbix_get [-hV] -s <host name or IP> [-p <port>] [-I <IP address>] -k <key>
+Options:
+ -s --host <host name or IP>          Specify host name or IP address of a host
+ -p --port <port number>              Specify port number of agent running on the host. Default is 10050
+ -I --source-address <IP address>     Specify source IP address
+-k --key <key of metric>             Specify key of item to retrieve value for
+-h --help                            Give this help
+ -V --version                         Display version number
+Example: zabbix_get -s 127.0.0.1 -p 10050 -k "system.cpu.load[all,avg1]"
+```
+
+测试服务器间的连接，
+```
+zabbix_get -s 127.0.0.1 -p 10050 -k "system.cpu.load[all,avg15]"
+zabbix_get -s 127.0.0.1 -p 10050 -I 127.0.0.1 -k "system.hostname"
+zabbix_get -s 192.168.30.131 -p 10050 -k "system.uptime"
+
+```
+
+---
+#### Web管理界面的安装
+复制/root/zabbix-3.0.8/frontends下的PHP文件夹到web服务器根目录，改名为zabbix。
+访问地址：http://IP/zabbix/setup.php 进行安装。
+
 
 ---
 ## Web界面配置
@@ -251,15 +401,38 @@ Status of Zabbix就是一个状态栏
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/Zabbix%E7%9B%91%E6%8E%A7027.png)
 Zabbix 基础完!
 
-本文参考了：http://www.abcdocker.com/abcdocker/1402
-
+参考：http://www.abcdocker.com/abcdocker/1402
 
 ---
+## Zabbix字符集乱码
+
+Centos补全安装软件包：`yum install -y bash-completion`
+
+在c:\windows\fonts下找到“楷体常规”的字符包，上传到/web目录/zabbix/fonts目录下。
+```
+find / -type f -name "defines.inc.php"
+#defines.inc.php文件一般在/web目录/zabbix/include/defines.inc.php
+
+编辑配置文件/web目录/zabbix/include/defines.inc.php：
+#第一处
+define('ZBX_FONT_NAME', 'DejaVuSans')；
+#改为
+define('ZBX_FONT_NAME', 'simkai');  #去掉后缀
+
+#第二处
+define('ZBX_GRAPH_FONT_NAME', 'DejaVuSans'); 
+#改为
+define('ZBX_GRAPH_FONT_NAME', 'SIMKAI');#去掉后缀
+其中simkai为字符包的名字，不包含tty后缀
+
+```
+保存退出刷新zabbix web界面就生效了。
 
 ---
 # Zabbix 进阶
 
 -未完-
 
+参考：http://itnihao.blog.51cto.com
 
 ---
