--- a/source/_posts/系统管理/2016-11-17-Pytnon版本升级.md
+++ b/source/_posts/系统管理/2016-11-17-Pytnon版本升级.md
@@ -1,9 +1,9 @@
 ---
-title: Pytnon版本升级
+title: Python版本升级
 categories:
   - 系统管理
 tags:
-  - Pytnon版本升级
+  - Python版本升级
 abbrlink: 40882
 date: 2016-11-17 15:15:59
 ---
@@ -40,4 +40,25 @@ python -V   #查看当前默认python版本 ```
 保存退出，yum即可正常使用。如若有其他命令、软件不能正常使用，仿照yum配置文件的修改方法，修改其配置文件即可。 
 
 ---
+# CentOS 安装easy_install、pip
+
+```
+wget -q http://peak.telecommunity.com/dist/ez_setup.py
+python ez_setup.py
+
+#CentOS安装python包管理安装工具pip：
+wget --no-check-certificate https://github.com/pypa/pip/archive/1.5.5.tar.gz
+
+#注意：wget获取https的时候要加上：--no-check-certificate
+tar zvxf 1.5.5.tar.gz    #解压文件
+cd pip-1.5.5/
+python setup.py install
+
+OK，安装好pip了，接着安装 requests吧。
+pip install requests
+
+
+```
+
+
 
