--- a/source/_posts/web服务器/2017-02-25-Nginx.md
+++ b/source/_posts/web服务器/2017-02-25-Nginx.md
@@ -10,6 +10,11 @@ abbrlink: 9355
 date: 2017-02-25 18:15:37
 ---
 
+# Nginx安装
+参考：https://wizardforcel.gitbooks.io/nginx-doc/content/Text/1.3_install.html
+https://wizardforcel.gitbooks.io/nginx-doc/content/Text/6.html
+
+---
 # Nginx负载均衡
 Nginx负载均衡适用于小规模的集群，负载均衡的本质是所有客户端都从服务器A入口，最后被分流到B,C,D,E...服务器，出口也是经过服务器A，这样在同一个机房内只需要一个公网IP即可实现分流，但服务器A的压力及带宽是关键部分。（对于大集群可以用DNS分流）
 
@@ -121,5 +126,6 @@ http://www.ilanni.com/?p=7631
 http://www.cnblogs.com/jacktang/p/3669115.html
 http://www.linuxidc.com/Linux/2016-04/130350.htm
 http://www.cnblogs.com/mecity/archive/2011/06/20/2085529.html
+https://wizardforcel.gitbooks.io/nginx-doc/content/Text/7.4_loadbalance.html
 
 ---
