--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -369,12 +369,13 @@ USE blog;
 SHOW TABLES;```
 
 ---
-## 查看表中的列
+## 查看表中的列、类型
 ```
 SHOW COLUMNS FROM auth_user; 
 或
 DESCRIBE auth_user;```
 **describe 表名** 是 **show columns from 表名** 的一种快捷方式。
+
 
 ---
 ## 查询
