--- a/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
+++ b/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
@@ -203,7 +203,7 @@ useradd -g zabbix -u 201 -m zabbix
 
 #下载安装包
 wget https://jaist.dl.sourceforge.net/project/zabbix/ZABBIX%20Latest%20Stable/3.0.8/zabbix-3.0.8.tar.gz
-tar zxvf zabbix-3.0.8.tar.gzls
+tar zxvf zabbix-3.0.8.tar.gz
 cd zabbix-3.0.8
 
 #开启大多数常用功能，如果报错，出错原因，一步一步来，不要一次性粘贴代码。这里注意mysql_config的路径可能不是这个。
