--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -9,6 +9,68 @@ date: 2016-11-03 10:46:10
 ---
 
 
+# 常用操作
+
+## 查看库，表类型（存储引擎）
+```
+show databases;
+use weixin888;
+show tables;                            #只能显示表名，不能得到表类型的信息
+SHOW TABLE STATUS FROM `weixin888`;     #weixin888是库名,显示的（所有表的信息）第二项type即是表的类型
+describe `rediscache`;                  #rediscache是表名，就能看到Type的类型
+SHOW CREATE TABLE `rediscache`;         #显示的是表创建时的信息，其中有TYPE或ENGINE一项，指定了表的类型```
+
+---
+## 修改表类型（修改存储引擎）
+### 创建时指定存储引擎
+```
+CREATE TABLE `rediscache` (
+`id` int(11) NOT NULL auto_increment,
+`sender` varchar(255) default NULL,
+`receiver` varchar(255) default NULL,
+`content` longtext,
+`is_read` char(1) default 'N',
+`send_time` datetime default NULL,
+`del_flag` tinyint(4) default '0',
+PRIMARY KEY (`id`)
+) ENGINE=MYISAM;```
+
+### 创建后修改存储引擎
+```
+ALTER TABLE `rediscache` ENGINE = INNODB;    #rediscache是表名，修改存储引擎为INNODB
+```
+
+---
+## 修改字段长度
+```
+describe `rediscache`;            #rediscache是表名，就能看到Type的类型
+SHOW CREATE TABLE `rediscache`;   #能看到存储引擎
+
+格式：alter table 表名 modify column 字段名 类型;
+alter table rediscache modify column data varchar(500);
+alter table rediscache modify column data longtext;```
+
+---
+## mysql max_allowed_packet 设置过小导致记录写入失败
+mysql根据配置文件会限制server接受的数据包大小。有时候大的插入和更新会受max_allowed_packet 参数限制，导致写入或者更新失败。
+
+查看目前配置：`show VARIABLES like '%max_allowed_packet%';`
+看到的是以B为单位，除以1024转换为KB，再除以1024装换为MB。
+**修改配置**:my.cnf（windows下是my.ini ）；把max_allowed_packet = 20M 改为你需要的值。
+找不到配置文件可以用：`mysql --help | grep my.cnf`
+
+法二：**在mysql命令行中修改**
+
+在mysql 命令行中运行：`set global max_allowed_packet = 20*1024*1024`(这里改为20M)
+然后退出命令行，重启mysql服务，再进入。
+
+`show VARIABLES like '%max_allowed_packet%';`
+查看下max_allowed_packet是否编辑成功
+
+---
+
+
+---
 # 密码
 
 **新安装默认密码为空**`mysql -u root` 即可进入，不要`mysql -u root -p `进不去的
